--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,32 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "Service book frontend",
-  "main": "./src/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "/\\.(js|jsx)$/"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sqMax",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
+    "html-webpack-plugin": "^5.5.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.11.1",
+    "react-router-dom": "^6.11.1",
+    "webpack-bundle-tracker": "^1.8.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.82.1",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
+  }
 }
