--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
+    "swagger-ui": "^4.18.3",
+    "swagger-ui-react": "^4.18.3",
     "webpack-bundle-tracker": "^1.8.1"
   },
   "devDependencies": {
